# ChangeLog for dev-ruby/rake
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.79 2009/08/14 20:59:58 maekke Exp $

  14 Aug 2009; Markus Meier <maekke@gentoo.org> rake-0.8.7.ebuild:
  amd64/x86 stable, bug #280851

  09 Aug 2009; Jeroen Roovers <jer@gentoo.org> rake-0.8.7.ebuild:
  Stable for HPPA (bug #280851).

  09 Aug 2009; nixnut <nixnut@gentoo.org> rake-0.8.7.ebuild:
  ppc stable #280851

  09 Aug 2009; Hans de Graaff <graaff@gentoo.org> -rake-0.8.4.ebuild,
  -rake-0.8.6.ebuild:
  Remove old versions.

  09 Jul 2009; Jeroen Roovers <jer@gentoo.org> rake-0.8.3.ebuild:
  Stable for HPPA too.

  30 May 2009; Hans de Graaff <graaff@gentoo.org> -rake-0.7.3.ebuild,
  -rake-0.8.1.ebuild:
  Remove old versions.

*rake-0.8.7 (17 May 2009)

  17 May 2009; Hans de Graaff <graaff@gentoo.org> +rake-0.8.7.ebuild:
  Version bump with compatibility fix for JRuby on Windows.

*rake-0.8.6 (12 May 2009)

  12 May 2009; Alex Legler <a3li@gentoo.org> -rake-0.8.5.ebuild,
  +rake-0.8.6.ebuild:
  Version bump, removing 0.8.5, bug 269552.

*rake-0.8.5 (10 May 2009)

  10 May 2009; Hans de Graaff <graaff@gentoo.org> +rake-0.8.5.ebuild:
  Version bump with better Windows and Ruby 1.9 compatibility.

  16 Mar 2009; Alex Legler <a3li@gentoo.org> rake-0.8.3.ebuild,
  rake-0.8.4.ebuild:
  Adding USE_RUBY entries

*rake-0.8.4 (07 Mar 2009)

  07 Mar 2009; Hans de Graaff <graaff@gentoo.org> +rake-0.8.4.ebuild:
  Version bump with compatibility fixes.

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> rake-0.8.3.ebuild:
  alpha/ia64 stable wrt #250348

  20 Dec 2008; Markus Meier <maekke@gentoo.org> rake-0.8.3.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> rake-0.8.3.ebuild:
  Stable on ppc wrt bug 250348

  12 Dec 2008; Hans de Graaff <graaff@gentoo.org> -rake-0.8.0.ebuild,
  -rake-0.8.2.ebuild:
  Remove old versions
