@@ -1,14 +1,8 @@
-DIST rake-0.7.3.gem 84480 RMD160 3def1145968a9ccc326ee904772878ce5e3e87b2 SHA1 d8e1f09f119b405679b9289cfad3723cddf18432 SHA256 4ed1dcade70490ee45fd7eba5e2a831675594d789e5fecb6da1cc525b3b991b5
-DIST rake-0.8.1.gem 90112 RMD160 fbb00b09f577b71081fe01c7e318e54acaabf37c SHA1 349b0853d5a32012a8f282750c2f1abaf1169213 SHA256 7cd2e89c7736a7829f1fbc2a2ecbd7f911ee68d170ea31ad2b8277b943380227
+AUX rake.bash-completion 1354 RMD160 a0ed1aac9fce4a866ed0bacf5d6b3585abaf8a2a SHA1 6a29c49507ae3a26b02bec54a7f77de354717578 SHA256 961163a75758eb2c9bea83356cda2d949fc823c9c82cb95351ffa44b5a01fbb1
 DIST rake-0.8.3.gem 100352 RMD160 8a81f35787c814b427177b88c07f6d2410b799a9 SHA1 fc3060c6c3ea3b804ef95576e41706b92fd51243 SHA256 c4792392fa21fd3b00b4909947cff70dcf327ebf07b86858a35b711f7391db9c
-DIST rake-0.8.4.gem 103936 RMD160 30e20fce53051afe2e7b5f03018b65a8ea8af9ab SHA1 3d0d287df69b38e4ba1efd567669df1d27809691 SHA256 ce856915b6b65a9f3fd5689a88f39010bbb8a7a68e685beaee4e1bd8687b7d65
-DIST rake-0.8.6.gem 104448 RMD160 e9dcdae78272dde17e515846d5839bebd4044da3 SHA1 f552c6f16b7afcc79fe525fbf3e3e809ce9f1293 SHA256 49f8f701dd28a74eaf2587bd3915856fbf865142e7167d6ad1c2231a7c275cd7
 DIST rake-0.8.7.gem 104960 RMD160 1c41208b3bf8fba5a89a7b156eb862c4cf6278f0 SHA1 91daad079d404b68a7dd179716b9fdd0c195144c SHA256 10b37bdad695497c98aa8d7632e2aa5a589ddae2abaa42d24e5950de4ffde10f
-EBUILD rake-0.7.3.ebuild 687 RMD160 4e50fd2f4e3d89b4218c3e17aa3afaa3937674d6 SHA1 4ed49e86f37b0cbbc14f35147a9c32f1fe6fb9ec SHA256 453c78fad3525d9f987fc6382da0ee89d9c501e24327e7d110ae79b7b02b70db
-EBUILD rake-0.8.1.ebuild 442 RMD160 239ca4b8e517f0e72e2fe75514bbf1bf34214bb5 SHA1 a6b62462d208359e6f11a1fcee6d91cb176578d7 SHA256 efd15c0bb967f004d60727bc9fe9f1e23bf911846c928fc48df9621591254fb3
 EBUILD rake-0.8.3.ebuild 440 RMD160 ad018cc4639026caabb7d616b392a63c56efe95f SHA1 06004a98653e1979a2d6118651ffb4f642ad0990 SHA256 15a9de67988c21ee637f0ba2d5a3e99fa7a61a163c16b068ffb44965c1f6a427
-EBUILD rake-0.8.4.ebuild 448 RMD160 245b249fe5dc5d95f459f5ba9068ce0018c8bccf SHA1 ef9ac89fe97bfb156642d57a66ea7cff90ed0ca6 SHA256 9a2a2809fdca917811a51f85ceb0ded18684d398d2568447e8d42eece22e11e1
-EBUILD rake-0.8.6.ebuild 448 RMD160 f2bf2299bac9513a4939d3b7d8c70eb0910507e9 SHA1 b3e22a6faf59453b00791d8cdce8aaf8fc5b95d0 SHA256 cd4db6e8a1e1a33f58a5d3ffb3938bda08569f9a54754b39bc632d83c4fc0519
+EBUILD rake-0.8.7-r1.ebuild 593 RMD160 259b576c2ee9a3923af98bbfaed9fe0f34236be9 SHA1 1dc807ea8e07bb0fa80101ec43055d36cb325f54 SHA256 814029dbecfbd8dea9f44f1e136bf48070da0ef2687a58d2f7c633641d619f80
 EBUILD rake-0.8.7.ebuild 463 RMD160 e07afc2bc2b0977d7061d3f1cc7befd7cda685cc SHA1 30e159218fc8e85c5069b94f80dddbe0c3446c03 SHA256 fe70f4f4b63270d608c4731b4c49acfa04451e1ed083b298d64e61570fd5a3c2
-MISC ChangeLog 9444 RMD160 c5523893ed4ac06a1374af4fc4c93601f1d63620 SHA1 9c025beee2eb1049d865e6dbcb4c748cf924aa7a SHA256 6073a5725e3c5a24be277a3f26500deec0fb900186280042dcda7703b98281e8
+MISC ChangeLog 9642 RMD160 7bc73aba54aea5fbfe3a2f0794911b0ea5cbe56a SHA1 0eb960e0e6f979aea4d5da6d82e9a741dc14a22d SHA256 60aa9076b8eeb7d125f11d52d90aa8354bf348602aeb02182e934617d622ea6e
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
